--- a/service/package.json
+++ b/service/package.json
@@ -9,7 +9,6 @@
     "test": "jest",
     "lint": "eslint . --ext .js"
   },
-
   "dependencies": {
     "@logtail/node": "^0.5.0",
     "@telegram-apps/init-data-node": "^1.0.4",
@@ -18,6 +17,7 @@
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
