--- a/service/package.json
+++ b/service/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
+    "start:test": "node src/test.js",
     "test": "jest",
     "lint": "eslint . --ext .js"
   },
